--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="more">더보기</string>
 
     <string name="to_back">이전으로</string>
+    <string name="save">저장</string>
 </resources>
