--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="to_back">이전으로</string>
     <string name="save">저장</string>
+    <string name="deselect">선택 해제</string>
 </resources>
