--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="select_download_manner">다운로드 방식 선택</string>
     <string name="main_detail_transition_name">mainDetailTransition%1$s</string>
     <string name="detail_transition_name">detailTransition</string>
+    <string name="input_query">검색어 입력…</string>
 
     <string name="home">홈</string>
     <string name="purchase_list">구입목록</string>
