--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">DCDown</string>
+    <string name="notification_channel_name_download">다운로드</string>
+    <string name="notification_channel_desc_download">다운로드 진행 상황을 표시하는 알림입니다.</string>
+
     <string name="select_all">전체 선택</string>
     <string name="search">검색</string>
     <string name="load_end">모두 로드했습니다</string>
@@ -11,6 +14,9 @@
     <string name="home">홈</string>
     <string name="purchase_list">구입목록</string>
     <string name="more">더보기</string>
+    <string name="save_all">전체 저장</string>
+    <string name="save_compressed">압축 저장</string>
+    <string name="cancel">취소</string>
 
     <string name="to_back">이전으로</string>
     <string name="save">저장</string>
@@ -20,4 +26,12 @@
     <string name="id">식별 코드</string>
     <string name="password">비밀번호</string>
     <string name="login_welcome_message">%1$s(%2$s) 로그인됨</string>
+
+    <string name="alert_idle">다운로드 준비 중</string>
+    <string name="alert_fetching_package_info">패키지 정보 받아오는 중</string>
+    <string name="alert_media_scanning">미디어 스캔 중</string>
+    <string name="alert_archiving">압축 중</string>
+    <string name="alert_exporting">내보내는 중</string>
+    <string name="alert_downloading">다운로드 중</string>
+    <string name="alert_download_complete">다운로드 완료(%1$d/%2$d 성공)</string>
 </resources>
