--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="password">비밀번호</string>
     <string name="login_welcome_message">%1$s(%2$s) 로그인됨</string>
 
+    <string name="start_download">다운로드를 시작합니다.</string>
+    <string name="alert_default_title">디시콘 다운로드</string>
     <string name="alert_idle">다운로드 준비 중</string>
     <string name="alert_fetching_package_info">패키지 정보 받아오는 중</string>
     <string name="alert_media_scanning">미디어 스캔 중</string>
