--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,16 @@
     <string name="alert_exporting">내보내는 중</string>
     <string name="alert_downloading">다운로드 중</string>
     <string name="alert_download_complete">다운로드 완료(%1$d/%2$d 성공)</string>
+
+    <string name="settings">설정</string>
+    <string name="account">계정</string>
+    <string name="current_account">현재 계정</string>
+    <string name="login_invalidate">로그인 정보 갱신</string>
+    <string name="login_invalidate_content">구입목록이 제대로 표시되지 않을 때 눌러주세요.</string>
+    <string name="logout">로그아웃</string>
+    <string name="save_location">일반 저장 위치</string>
+    <string name="archive_location">압축 저장 위치</string>
+    <string name="app_info">앱 정보</string>
+    <string name="version">버전</string>
+    <string name="open_source_license">오픈소스 라이선스</string>
 </resources>
